<resources>
    <!-- Fragment下导航栏文字 -->
    <string name="app_name">Library</string>
    <string name="home">主页</string>
    <string name="add">二维码</string>
    <string name="inbox">记录</string>
    <string name="more">个人</string>
    <!-- 注册界面数据 -->
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="zhuce">用户注册</string>
    <string name="zhuce_zhanghao">请输入用户名</string>
    <string name="zhuche_srmm">输入密码</string>
    <string name="zhuce_qrmm">确认密码</string>
    <string name="zhuce_phone">输入手机号</string>
    <string name="zhuce_sms">输入短信验证码</string>
    <string name="yanzheng">验证短信验证码</string>
    <!-- 登录界面数据 -->
    <string name="srzh">请输入账号</string>
    <string name="srmm">请输入密码</string>
    <string name="dl">登录</string>
    <string name="remeberme">记住我</string>
    <string name="newuser">新用户注册</string>
    <string name="phonesend">手机验证码一键登录</string>
    <!-- 首页面文字数据 -->
    <string name="username">啵啵虎</string>
    <string name="zhifu">支付</string>
    <string name="zhanghao">账号管理</string>
    <string name="shoucang">收藏</string>
    <string name="shezhi">设置</string>
    <string name="fankui">反馈</string>
    <!-- 账号管理页面数据 -->
    <string name="gl_safe">账号与安全</string>
    <string name="gl_boys">青少年模式</string>
    <string name="gl_newsms">新消息通知</string>
    <string name="gl_dont">勿扰模式</string>
    <string name="gl_talk">聊天</string>
    <string name="gl_ys">隐私</string>
    <string name="gl_ty">通用</string>
    <string name="gl_fk">帮助与反馈</string>
    <string name="gl_tc">退出登录</string>
    <!-- 个人中心界面用户数据 -->
    <string name="smssdk_bind_mobile_show">手机号验证</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
    <string name="smssdk_dont_use_demo_appkey">此APPKEY仅供测试使用，且不定期失效，请到mob.com后台申请正式APPKEY</string>
    <string name="smsdemo_network_error">网络异常，请稍后重试</string>
    <!-- 新版-->
    <string name="smssdk_start_verify">开始验证</string>
    <string name="smssdk_default_country">中国</string>
    <string name="smssdk_sms_verify">短信验证</string>
    <string name="smssdk_audio_verify">语音验证</string>
    <string name="smssdk_get_code">获取验证码</string>
    <string name="smssdk_verify">验证</string>
    <string name="smssdk_error_hint">验证码错误</string>
    <string name="smssdk_busy_hint">操作频繁请稍等</string>
    <string name="smssdk_login_success">登录成功</string>
    <string name="smssdk_login_failure">喔噢，登录失败</string>
    <string name="smssdk_service_title">本服务由MobTech SDK提供</string>
    <string name="smssdk_failure_title">请检查4G网络链接\n超时未授权登录</string>
    <string name="smssdk_verify_again">再次验证</string>
    <string name="smssdk_customer_service">客服电话：400-685-2216</string>
    <string name="smssdk_advise">咨询客服</string>
    <string name="smssdk_version">当前版本：v%1$s</string>

    <!-- 隐私协议弹框 -->
    <string name="smsdemo_authorize_dialog_title">服务授权</string>
    <string name="smsdemo_authorize_dialog_content">欢迎您使用图书馆系统，本图书馆系统为免费的开放软件平台，为了保证您使用本软件的安全性，并帮助您能够成功的注册属于自己的账号。我们将依据MobTech的《隐私政策》来帮助你了解我们需要收集哪些数据。请您详细查看我们的隐私政策，详见</string>
    <string name="smsdemo_authorize_dialog_reject">拒绝</string>
    <string name="smsdemo_authorize_dialog_accept">同意</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
