<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ssmbg">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="14dp"
            android:src="@drawable/smssdk_while_left_arrow" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zhuce"
            android:textSize="25sp"
            android:textColor="#000000"
            android:gravity="center"
            android:layout_marginBottom="10dp"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/edt_UserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zhuce_zhanghao"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
        />
    <RadioGroup
        android:id="@+id/rg_sex"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boy"
            android:id="@+id/rgbtn_boy"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girl"
            android:id="@+id/rgbtn_girl"/>
    </RadioGroup>

    <EditText
        android:id="@+id/edt_pwd_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zhuche_srmm"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/edt_pwd_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zhuce_qrmm"
        android:textColor="#000000"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        />
    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/zhuce_phone"
        android:textColor="#000000"
        android:layout_marginBottom="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edt_sms"
            android:hint="@string/zhuce_sms"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="10dp"
            android:ems="14"
            />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="发送短信验证码"
            android:textSize="16dp"
            android:textColor="#fff"
            />


    </RelativeLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_updata"
            android:layout_width="240dp"
            android:layout_height="33dp"
            android:layout_marginLeft="10dp"
            android:background="#cfc"
            android:onClick="deleteOnClick"
            android:text="注册" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:gravity="center">
        <TextView
            android:id="@+id/btn_yanzheng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/yanzheng"
            android:textColor="#1783e3"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>